# NumericSim

./: .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: FindDealII.cmake
examples/: CMakeLists.txt  readTimeDataFile.m
examples/heat/: main.cpp
examples/poisson/: CMakeLists.txt  circle.obj.inl  fdm.cpp  fem.cpp  half_circle.obj.inl  main.cpp  triangles.obj.inl
src/: CMakeLists.txt  Doxyfile.in
src/lib/: CG.h  CG.inl  CMakeLists.txt  ComplexNumber.h  ComplexNumber.inl  Config.h  CountableSet.h  CountableSet.inl  Exceptions.h  Iterative.h  Iterative.inl  Jacobi.h  Jacobi.inl  LU.h  LU.inl  Matrix.h  Matrix.inl  Normal.h  OutputStream.h  Simplex.h  Simplex.inl  SparseCountableSet.h  SparseCountableSet.inl  SparseMatrix.h  SparseMatrix.inl  Triangle.h  Types.h  Utils.h  Vector.h  Vector.inl  nsConfig.h
src/lib/export/: VTKExporter.h  VTKExporter.inl
src/lib/loader/: MeshTriangleLoader.h  MeshTriangleLoader.inl
src/lib/matrix/: BaseMatrix.h  BaseMatrix.inl  DenseMatrix.h  DenseMatrix.inl  FixedMatrix.h  FixedMatrix.inl  Matrix.h  Matrix.inl  MatrixCheck.h  MatrixCheck.inl  MatrixConstructor.h  MatrixConstructor.inl  MatrixConverter.h  MatrixConverter.inl  MatrixOperations.h  MatrixOperations.inl  MatrixOrder.h  MatrixOrder.inl  SparseMatrix.h  SparseMatrix.inl
src/lib/mesh/: HyperCube.h  HyperCube.inl  Mesh.h  Mesh.inl
src/lib/quadrature/: GaussLegendreQuadratureFactory.h  GaussLegendreQuadratureFactory.inl  Quadrature.h  Quadrature.inl
src/lib/sf/: PolyShapeFunction.h  PolyShapeFunction.inl  ShapeFunction.h  ShapeFunction.inl
src/objloader/: CMakeLists.txt
src/objloader/loader/: MeshObjLoader.cpp  MeshObjLoader.h
src/objloader/mesh/: MeshObjLoader.h  MeshObjLoader.inl
src/poisson/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  Test.h  cg.cpp  complex.cpp  iterative.cpp  jacobi.cpp  lu.cpp  matrix.cpp  mesh.cpp  normal.cpp  objloader.cpp  polysf.cpp  quadrature.cpp  simplex.cpp  sparsematrix.cpp  sphere.obj.inl  utils.cpp  vector.cpp
