include_directories(AFTER ${CMAKE_CURRENT_SOURCE_DIR}/../src/lib ${CMAKE_CURRENT_SOURCE_DIR})

IF(NS_WITH_OBJLOADER)
include_directories(AFTER ${CMAKE_CURRENT_SOURCE_DIR}/../src/objloader)
ENDIF()

function(NS_ADD_TEST name src)
add_executable(test_${name} ${src} Test.h)
#target_link_libraries(test_${name} ns_lib)
IF(NS_WITH_OBJLOADER)
target_link_libraries(test_${name} ns_objloader)
ENDIF()
set_target_properties(test_${name} PROPERTIES VERSION ${NS_Version})
add_test(NAME ${name} COMMAND test_${name})
set_tests_properties(${name} PROPERTIES DEPENDS test_${name})
if(VERBOSE)
	message(STATUS "Test: test_${name}: ${src}")
endif()
endfunction()

# TESTS
NS_ADD_TEST(cg cg.cpp)
NS_ADD_TEST(complex complex.cpp)
NS_ADD_TEST(iterative iterative.cpp)
NS_ADD_TEST(lu lu.cpp)
NS_ADD_TEST(matrix matrix.cpp)
NS_ADD_TEST(mesh mesh.cpp)
NS_ADD_TEST(simplex simplex.cpp)
NS_ADD_TEST(utils utils.cpp)
NS_ADD_TEST(vector vector.cpp)

IF(NS_WITH_OBJLOADER)
NS_ADD_TEST(objloader objloader.cpp)
ENDIF()