SET(SRC 
 ${CMAKE_CURRENT_SOURCE_DIR}/Config.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CountableSet.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CountableSet.inl
 ${CMAKE_CURRENT_SOURCE_DIR}/LU.h
 ${CMAKE_CURRENT_SOURCE_DIR}/LU.inl
 ${CMAKE_CURRENT_SOURCE_DIR}/Matrix.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Matrix.inl
 ${CMAKE_CURRENT_SOURCE_DIR}/SparseCountableSet.h
 ${CMAKE_CURRENT_SOURCE_DIR}/SparseCountableSet.inl
 ${CMAKE_CURRENT_SOURCE_DIR}/SparseMatrix.h
 ${CMAKE_CURRENT_SOURCE_DIR}/SparseMatrix.inl
 ${CMAKE_CURRENT_SOURCE_DIR}/Vector.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Vector.inl)
 
add_library(ns_lib STATIC ${SRC})
set_target_properties(ns_lib PROPERTIES LINKER_LANGUAGE CXX)
